tests/enum_into/compile_fail/container/empty_attribute_list.rs
use enum_convert::EnumInto;

#[derive(EnumInto)]
#[enum_into()] // Should be #[enum_into(Target)]
enum Source {
    Unit,
}

enum Target {
    Unit,
}

fn main() {}
