tests/enum_into/compile_fail/container/empty_attribute_list.stderr
error: expected a list of target enums, for example #[enum_into(Target1, Target2)]
 --> tests/enum_into/compile_fail/container/empty_attribute_list.rs:4:1
  |
4 | #[enum_into()] // Should be #[enum_into(Target)]
  | ^
